fixed link underline in safari, fixed chevron overlap.

--- a/app/styles/v2/Vivanuncios/partials/components/hamburgerMenu/_hamburgerMenu.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/hamburgerMenu/_hamburgerMenu.scss
@@ -44,20 +44,18 @@
 
 $borderColor: $headerMenuItemSeparatorColor;
 .browse-categories {
-	font-size: 1.125em;
-
 	.browse-arrow {
 		position: absolute;
-		top: 15px;
-		right: 15px;
+		top: 18px;
+		right: 0;
 		&.icon-chevron {
 			background-size: 700%;
 		}
 		&.icon-up {
 			background-size: 3500%;
 		}
-		width: 25px;
-		height: 25px;
+		width: 20px;
+		height: 20px;
 	}
 
 	li {
@@ -66,10 +64,15 @@ $borderColor: $headerMenuItemSeparatorColor;
 
 	.browse-categories-text {
 		color: $profileDropdownLoginBtnColor;
-		padding-left: 8px;
+		padding-left: 5px;
 	}
 
 	.category-name {
+		a {
+			display: block;
+			height: 100%;
+			width: 100%;
+		}
 		position: relative;
 		border-bottom: 1px solid $borderColor;
 		padding: 15px;
@@ -80,7 +83,6 @@ $borderColor: $headerMenuItemSeparatorColor;
 }
 
 .profile-information {
-	font-size: 1.125em;
 	.profile-dropdown {
 		width: 100%;
 		border: none;
@@ -94,6 +96,9 @@ $borderColor: $headerMenuItemSeparatorColor;
 			width: 26px;
 			height: 25px;
 			background-size: 500px 500px;
+		}
+		.item-text {
+			padding-left: 5px;
 		}
 		.link-item {
 			padding: 15px;
